# NCCouple

./: .gitignore  CMakeLists - 副本.txt  CMakeLists.txt  CMakeSettings.json  README.md  run.sbatch
NCCouple/: CAGLWraper.h  CFDMesh.cpp  CFDMesh.h  ConfigurationFile.cpp  ConfigurationFile.h  FileConvertor.cpp  FileConvertor.h  GeneralMesh.cpp  GeneralMesh.h  Logger.cpp  Logger.h  MOCIndex.cpp  MOCIndex.h  MOCMesh.cpp  MOCMesh.h  Mesh.cpp  Mesh.h  Solver.cpp  Solver.h  Structure.cpp  Structure.h  index.cpp  index.h  main.cpp  pin_c1.apl  pin_c2.apl
NCCouple/MHT_IO/: FieldIO.cpp  FieldIO.h  VTKIO.cpp  VTKIO.h
NCCouple/MHT_common/: AllocateArray.h  Configuration.h  GeometryTools.cpp  GeometryTools.h  InterpolationTools.cpp  InterpolationTools.h  ListTools.cpp  ListTools.h  LogLevel.cpp  LogLevel.h  MaxMin.h  Point3D.cpp  Point3D.h  StringTools.cpp  StringTools.h  SystemControl.cpp  SystemControl.h  Tensor.cpp  Tensor.h  Vector.h
NCCouple/MHT_field/: BaseField.cpp  BaseField.h  BoundaryCalculationUtility.cpp  BoundaryCalculationUtility.h  BoundaryFaceZoneField.cpp  BoundaryFaceZoneField.h  ElementField.cpp  ElementField.h  ElementFieldOperator.cpp  FaceField.cpp  FaceField.h  FaceFieldOperator.cpp  Field.cpp  Field.h  FieldOperator.cpp  FieldOperator.h  InteriorFaceZoneField.cpp  InteriorFaceZoneField.h  NodeField.cpp  NodeField.h  NodeFieldOperator.cpp  NumerBC.cpp  NumerBC.h
NCCouple/MHT_mesh/: FluentMeshBlock.cpp  FluentMeshBlock.h  LagrangeTools.cpp  LagrangeTools.h  Mesh.cpp  Mesh.h  MeshSupport.cpp  MeshSupport.h  RegionConnection.h  StandardMeshBlock.cpp  StandardMeshBlock.h  UnGridFactory.cpp  UnGridFactory.h
NCCouple/MHT_polyhedron/: Polyhedron.cpp  Polyhedron.h  PolyhedronSet.cpp  PolyhedronSet.h
test/: main.cpp
tools/CGAL/: config.h
